Lab 07: done! fixed: alignment

--- a/Lab 07/static/css/result.css
+++ b/Lab 07/static/css/result.css
@@ -77,13 +77,14 @@
 	margin-bottom: 0.2%;
 	vertical-align: middle;
 	display: inline;
-	height:100%;
+	/*height:100%;*/
 }
 .result__result_item_web_contents_pic
 {
-	height: 70%;
+	max-height: 70%;
 	width: auto;
 	overflow:hidden;
+	display:inline-flex;
 }
 .result__result_item_web_contents_pic_property{max-height:200px;}
 .result__result_item_web_contents_text{width:60%;}
